<resources>
    <string name="app_name">헬스올라</string>
    <string name="title_healthinfo">건강정보</string>
    <string name="title_diagnosis">자가진단</string>
    <string name="title_experience">체험단</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_survey">설문조사</string>
    <string name="title_settings">설정</string>
    <string name="title_myinformation">내 정보</string>
    <string-array name="category_options">
        <item>전체</item>
        <item>건강</item>
        <item>생활</item>
        <item>운동</item>
    </string-array>
    <string-array name="sort_options">
        <item>최신순</item>
        <item>인기순</item>
    </string-array>
</resources>