<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_healthinfo"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_healthinfo" />

    <item
        android:id="@+id/navigation_diagnosis"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_diagnosis" />

    <item
        android:id="@+id/navigation_experience"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_experience" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />
</menu>