<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_startpage">

    <!-- HealthInfoFragment
    <fragment
        android:id="@+id/navigation_healthinfo"
        android:name="com.hsfa.hearur_android.mainactivity.ui.healthinfo.HealthInfoFragment"
        android:label="@string/title_healthinfo"
        tools:layout="@layout/fragment_healthinfo" />

    <fragment
        android:id="@+id/navigation_diagnosis"
        android:name="com.hsfa.hearur_android.mainactivity.ui.diagnosis.DiagnosisFragment"
        android:label="@string/title_diagnosis"
        tools:layout="@layout/fragment_diagnosis" />
    -->
    <fragment
        android:id="@+id/navigation_startpage"
        android:name="com.hsfa.hearur_android.activity.mainactivity.ui.startpage.StartPageFragment"
        android:label="헬스올라"
        tools:layout="@layout/fragment_startpage" />
    <fragment
        android:id="@+id/navigation_experience"
        android:name="com.hsfa.hearur_android.activity.mainactivity.ui.experience.ExperienceFragment"
        android:label="@string/title_experience"
        tools:layout="@layout/fragment_experience" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.hsfa.hearur_android.activity.mainactivity.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_survey"
        android:name="com.hsfa.hearur_android.activity.mainactivity.ui.survey.SurveyFragment"
        android:label="@string/title_survey"
        tools:layout="@layout/fragment_survey" />
</navigation>